--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
-    "play-dl": "^1.9.0"
+    "play-dl": "^1.9.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "node-fetch": "^2.7.0"
